--- a/prime_nodes.info.yml
+++ b/prime_nodes.info.yml
@@ -1,7 +1,7 @@
 name: Prime Nodes
 type: module
-description: Defines a custom "Prime" nodes module.
-core: 9.x
+description: "Defines a custom Prime nodes module."
+core_version_requirement: ^9
 package: Custom
 dependencies:
   - block
