--- a/views/views.view.prrecent_content.yml
+++ b/views/views.view.prrecent_content.yml
@@ -2,8 +2,11 @@ uuid: 3e099747-5a61-48aa-9323-9a5ddd386b3f
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.body
   module:
     - node
+    - text
     - user
 _core:
   default_config_hash: MxwbHUmXqKQgTGCTWcMxsfUH9NZJ8ZVqZp6801AOa40
@@ -49,7 +52,7 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 10
+          items_per_page: 3
           offset: 0
       style:
         type: table
@@ -160,7 +163,7 @@ display:
           element_type: ''
           element_class: ''
           element_label_type: ''
-          element_lbel_class: ''
+          element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
@@ -230,7 +233,7 @@ display:
           table: node_field_data
           field: langcode
           relationship: none
-          group_type: group
+          goup_type: group
           admin_label: ''
           operator: in
           value:
@@ -345,14 +348,23 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: Page
+    display_title: 'Page Table'
     position: 2
     display_options:
       display_extenders: {  }
       css_class: prime-node-recent-page
       defaults:
         css_class: false
+        pager: false
+        sorts: false
       path: recent-prime-nodes
+      pager:
+        type: some
+        options:
+          items_per_page: 5
+          offset: 0
+      display_description: ''
+      sorts: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -362,4 +374,139 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
-a
+  page_2:
+    display_plugin: page
+    id: page_2
+    display_title: 'Page List'
+    position: 3
+    display_options:
+      display_extenders: {  }
+      path: recent-prime-nodes-list
+      title: 'Prime Nodes Recent List'
+      defaults:
+        title: false
+        style: false
+        row: false
+        fields: false
+        sorts: false
+      style:
+        type: default
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+      row:
+        type: fields
+        options: {  }
+      fields:
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          entity_type: node
+          entity_field: title
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            make_link: false
+            absolute: false
+            trim: false
+            word_boundary: false
+            ellipsis: false
+            strip_tags: false
+            html: false
+          hide_empty: false
+          empty_zero: false
+          relationship: none
+          group_type: group
+          admin_label: ''
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_alter_empty: true
+          type: string
+          settings:
+            link_to_entity: true
+          plugin_id: field
+        body:
+          id: body
+          table: node__body
+          field: body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_trimmed
+          settings:
+            trim_length: 200
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+      display_description: ''
+      sorts: {  }
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - user
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.body'
